# azure_etl

./: .env_dev  README.md  main.py  pyproject.toml  requeriments.txt
src/cloud/: cloud_connection.py
src/data_source/: csv_data_source.py  generic_data_source.py
src/database/: db_connection.py  db_model.py
src/docs/temp_downloads/: order_item_refunds.parquet  order_items.parquet  orders.parquet  products.parquet
src/schema/: schema_validation.py
